0.9.2 (2010.03.10)
-----
[*] Fixed a bug, due to which trackers reverted to original torrent's trackers
after adding torrent to a session or after program restart.


0.9.1 (2010.02.07)
-----
[*] Fixed a bug, due to which GUI could freeze and do not to response when
user watched peers list with clients which have the same IPs.
[*] Fixed unhandled exception with libconfig 1.4.1.
[*] Fixed build error with gtkmm 2.19.


0.9 (2010.02.01)
-----
[+] Download complete notifications.
[+] Magnet links support.
[+] IP filter enabling/disabling.
[+] Now Publisher URL is also gotten from torrent's 'comment' field.
[+] Partial Spanish and Ukrainian translations.
[*] Fixed a bug, due to which "Copy when finished to" option copied
unnecessary files (downloaded by libtorrent, but marked as "Do not download"
by user).
[*] Fixed unhandled exception when user entered an invalid IP address in the
Preferences dialog.
[*] libtorrent-rasterbar 0.14.8.


0.8 (2009.10.21)
-----
[+] Trackers' editing in the Add torrent dialog.
[+] "Compact details tab" option in the Preferences window.
[+] Some small GUI enhancements.
[*] Fixed a bug, due to which Flush ended its work when it was not be able to
create an inotify instance or when user selected "Load torrents from" option
in the Preferences window (not everywhere but for example on Linux 2.6.31).


0.7.2 (2009.10.02)
-----
[*] Fixed a bug, due to which Flush could crash in very rare case.


0.7.1 (2009.09.23)
-----
[+] Internal fixes and code enhancements.
[+] libtorrent-rasterbar-0.14.6.
[*] Fixed some small bugs.


0.7 (2009.07.09)
-----
[+] "Random port" setting in the Daemon::Network::Misc settings tab.
[+] "Next announce" and "Announce interval" elements in the torrent's details
tab.
[+] "Max announce interval" setting in the Daemon::Network::Misc settings tab.
[+] More compact torrent's details tab.
[+] Deleting torrents by Delete key and deleting torrents with data by Shift +
Delete keys.
[+] Some small GUI and internal enhancements.