@@ -1,3 +1,7 @@
+-----
+[*] Libtorrent 0.15 support.
+
+
 0.9.2 (2010.03.10)
 -----
 [*] Fixed a bug, due to which trackers reverted to original torrent's trackers
